--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(NPRG041)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(NPRG041 main.cpp)
+add_executable(NPRG041 main.cpp Model/Shared/Settings.cpp Model/Shared/SmartConversion.cpp)
+
