--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(NPRG041
         main.cpp
         Model/Shared/Settings.cpp
-        Model/Shared/SmartConversion.cpp
         Model/Editor/Editor.cpp
         Model/Editor/Menu/MainMenu.cpp
         Model/Editor/Menu/SimulationEditorMenu.cpp
@@ -16,5 +15,9 @@ add_executable(NPRG041
         Model/Editor/Menu/SimulationViewMenu.cpp
         Model/Editor/Menu/SolverMenu.cpp
         Model/Editor/Menu/SolverSettingsMenu.cpp
+        Model/Simulation/Cache.cpp
+        Model/Simulation/Solvers/PreSolvers/Source.cpp
+        Model/Simulation/Simulation.cpp
+        Model/Simulation/Particle.cpp
         )
 
